--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
-          cargo install --version ${MDBOOK_VERSION} mdbook
+          cargo install --version ${MDBOOK_VERSION} mdbook mdbook-mermaid
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
